test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/multi_storage_class_var.plx
pub fn main(none) i32 {
    # a variable can't have more than one storage class
    data extrn foo: i32 = 0
    return foo
}
